crates/hir-ty/tests/snapshots/jls_annotation_elements__missing_element_nested.snap
---
source: crates/hir-ty/tests/jls_annotation_elements.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

@interface Inner {
    int v();
    int w() default 0;
}

@interface Outer {
    Inner in();
}

@Outer(in = @Inner)
class Anns {}

@11:13: missing-annotation-element: 'v' missing but required
