crates/hir-ty/tests/snapshots/jls_annotation_elements__missing_element_provided.snap
---
source: crates/hir-ty/tests/jls_annotation_elements.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

@interface Ann {
    int value();
}

@Ann(1)
class Single {}
