crates/hir-ty/tests/snapshots/jls_annotation_elements__null_literal_value.snap
---
source: crates/hir-ty/tests/jls_annotation_elements.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

@interface Ann {
    String s();
}

@Ann(s = null)
class Anns {}

@6:9: non-constant-annotation-element: Attribute value must be constant
