crates/hir-ty/tests/snapshots/jls_annotation_elements__unknown_member.snap
---
source: crates/hir-ty/tests/jls_annotation_elements.rs
expression: out
---
FILE /src/com/example/Anns.java:
package com.example;

@interface Ann {
    int value();
}

class Anns {
    @Ann(foo = 1)
    void run() {}
}

@7:5: missing-annotation-element: 'value' missing but required
@7:15: unresolved-annotation-member: No annotation member named 'foo'
